infrastructure/k8s/10-loyalty-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty-service
  namespace: loyalty-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty-service
  template:
    metadata:
      labels:
        app: loyalty-service
    spec:
      containers:
        - name: loyalty-service
          image: loyalty-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: loyalty-service
  namespace: loyalty-service
spec:
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: loyalty-service
